--- a/services.html
+++ b/services.html
@@ -449,7 +449,7 @@
               </div>
               <!-- /.widget__body -->
               <div
-                class="widget__footer d-flex flex-wrap justify-content-between align-items-center"
+                class="widget__footer d-flex flex-column flex-wrap justify-content-between align-items-center"
               >
               <p>Consulta y reconsulta:</p>
                 <div class="plan__price">
@@ -466,7 +466,7 @@
             <!-- /.widget-plan -->
 
             <!-- /.text-block -->
-            <div class="pricing-widget cluster-grid">
+            <div class="pricing-widget cluster-grid hide">
               <div class="pricing-widget-layout1">
                 <h5 class="pricing__title">Lista de procedimientos</h5>
                 <ul class="pricing__list list-unstyled">
