Gineco, trauma y otorrino

--- a/otorrinolaringologia.html
+++ b/otorrinolaringologia.html
@@ -36,11 +36,6 @@
           alt=""
         />
       </div>
-
-      <!-- ========================
-       page title
-    =========================== -->
-
       <section id="content">
         <div class="with-sidebar">
           <nav class="stack">
@@ -388,56 +383,55 @@
           </nav>
           <!-- /.sidebar -->
           <main class="service-content stack">
-            <h3>Aliados en la salud femenina</h3>
+            <h3>Respira profundamente sin impedimentos</h3>
             <div class="text-block">
               <p class="">
-                En la Clínica Unifranz sabemos que tu salud ginecológica es muy personal.
-                Nuestro equipo de ginecólogos altamente calificados te proporcionará atención
-                médica excepcional en un ambiente acogedor y
-                respetuoso, asegurando que te sientas escuchada, comprendida y cuidada.
+                Tomar un largo aliento sin impedimentos transforma tu experiencia del mundo. Nosotros en la Clínica Unifranz queremos que puedas gozar una salud y bienestar completos.
+                Por eso, nuestro equipo dedicado de otorrinolaringología está aquí para ti.
               </p>
               <p>
-                Nuestros profesionales te ofrecerán los tratamientos más efectivos y menos invasivos disponibles.
-                Además, en la clínica te brindaremos un cuidado personalizado que responda a tus necesidades y expectativas únicas.
+                Desde el momento en que entras en nuestra clínica, te sumerges en un espacio donde tu bienestar es nuestra máxima prioridad.
+                Imagina un lugar donde cada susurro, cada nota musical y cada aliento es claro y sin esfuerzo. Así es como te queremos hacer sentir.
+                Nuestros especialistas te ofrecerán diagnósticos precisos y tratamientos efectivos, respetando siempre tu comodidad y tus necesidades.
               </p>
-              <h4>¿Qué es la ginecología (y obstetricia)?</h4>
+              <h4>¿Qué es la otorrinolaringología?</h4>
               <p>
-                Es la rama de la medicina que se enfoca en el cuidado integral del sistema reproductivo femenino.
-                Esto incluye la prevención, diagnóstico y tratamiento de una amplia gama de condiciones que afectan
-                a los órganos reproductivos como el útero, los ovarios, la vagina y las mamas.
+                Esta especialidad médica se enfoca en tratar y prevenir afecciones del oído, la nariz y la garganta, así como estructuras relacionadas de la cabeza y el cuello.
+                Cada sonido que escuchas, cada palabra que pronuncias y cada aroma que disfrutas, está relacionado con esta especialidad.
+                Esto incluye una amplia gama de condiciones, desde infecciones comunes hasta trastornos más complejos que afectan tu audición, equilibrio, olfato, respiración, voz y deglución.
               </p>
               <p>
-                La obstetricia está estrechamente relacionada con la ginecología, pues es la especialidad médica que se enfoca
-                en el tratamiento y manejo del embarazo, cuidado prenatal, parto y cuidado post parto.
+                Nuestro enfoque abarca tanto el tratamiento de condiciones agudas como el manejo de trastornos crónicos.
+                Además, estamos equipados con la tecnología más avanzada para ofrecerte diagnósticos precisos y tratamientos efectivos, siempre con el objetivo de mejorar tu calidad de vida y bienestar.
               </p>
-              <h4>Compromiso con la salud y con nuestros pacientes</h4>
+              <h4>Dedicados a cuidar de ti</h4>
               <p>
-                Para nosotros, tu confianza y tu salud son lo más importante. Por eso, somos transparentes con los precios y los procedimientos que tenemos disponibles.
-                Mira los precios que tenemos, pensando en tu bienestar económico y tu salud.
+                Te ofrecemos una gama completa de servicios otorrinolaringológicos, con precios transparentes y pensando siempre en lo mejor para ti y tu familia.
+                Aquí encontrarás:
               </p>
             </div>
             <!-- /.text-block -->
             <ul class="list-items list-unstyled">
               <li>
-                Exámenes pélvicos y pruebas de Papanicolaou.
+                Evaluaciones auditivas y tratamientos para la pérdida de audición.
               </li>
               <li>
-                Manejo de la menopausia.
+                Manejo de trastornos de la voz y la garganta, incluyendo problemas de las cuerdas vocales.
               </li>
               <li>
-                Diagnóstico y tratamiento de trastornos menstruales.
+                Tratamiento para infecciones y afecciones nasales, como la sinusitis.
               </li>
               <li>
-                Cuidado y consejería en anticoncepción.
+                Cirugías endoscópicas nasales y del oído.
               </li>
               <li>
-                Evaluación y tratamiento de la infertilidad.
+                Pruebas de equilibrio y vértigo.
               </li>
               <li>
-                Detección y manejo de enfermedades de transmisión sexual.
+                Atención especializada para niños con trastornos de oído, nariz y garganta.
               </li>
               <li>
-                Cuidado prenatal y seguimiento del embarazo.
+                Cirugías funcionales para trastornos del oido y la naríz (tabi).
               </li>
             </ul>
             <div class="widget-plan">
@@ -451,7 +445,7 @@
               <div
                 class="widget__footer d-flex flex-column flex-wrap justify-content-between align-items-center"
               >
-              <p>Consulta y reconsulta:</p>
+              <p>Consulta:</p>
                 <div class="plan__price">
                   Bs. 250
                 </div>
