--- a/traumatologia.html
+++ b/traumatologia.html
@@ -36,11 +36,6 @@
           alt=""
         />
       </div>
-
-      <!-- ========================
-       page title
-    =========================== -->
-
       <section id="content">
         <div class="with-sidebar">
           <nav class="stack">
@@ -388,56 +383,55 @@
           </nav>
           <!-- /.sidebar -->
           <main class="service-content stack">
-            <h3>Aliados en la salud femenina</h3>
+            <h3>Nos enfocamos en tu recuperación y fortaleza física</h3>
             <div class="text-block">
               <p class="">
-                En la Clínica Unifranz sabemos que tu salud ginecológica es muy personal.
-                Nuestro equipo de ginecólogos altamente calificados te proporcionará atención
-                médica excepcional en un ambiente acogedor y
-                respetuoso, asegurando que te sientas escuchada, comprendida y cuidada.
+                Nuestro equipo de expertos en traumatología y ortopedia está comprometido a brindarte atención médica de primera calidad, en un ambiente donde la seguridad y el respeto son primordiales.
+                Nos enfocamos en entender y tratar tus lesiones y condiciones musculoesqueléticas con el máximo cuidado y profesionalismo.
               </p>
               <p>
-                Nuestros profesionales te ofrecerán los tratamientos más efectivos y menos invasivos disponibles.
-                Además, en la clínica te brindaremos un cuidado personalizado que responda a tus necesidades y expectativas únicas.
+                Nuestros traumatólogos utilizan los métodos diagnósticos y terapéuticos más avanzados y menos invasivos posibles, con un enfoque en tu recuperación rápida y eficiente.
+                En la Clínica Unifranz, cada plan de tratamiento es personalizado, asegurando que se ajuste a tus necesidades específicas y te ayude a volver a tu máximo nivel de actividad.
               </p>
-              <h4>¿Qué es la ginecología (y obstetricia)?</h4>
+              <h4>¿Qué es la Traumatología y Ortopedia?</h4>
               <p>
-                Es la rama de la medicina que se enfoca en el cuidado integral del sistema reproductivo femenino.
-                Esto incluye la prevención, diagnóstico y tratamiento de una amplia gama de condiciones que afectan
-                a los órganos reproductivos como el útero, los ovarios, la vagina y las mamas.
+                La traumatología es la especialidad médica dedicada al diagnóstico, tratamiento, rehabilitación y prevención de las lesiones y enfermedades del sistema musculoesquelético.
+                Esto incluye huesos, articulaciones, ligamentos, tendones, músculos y nervios.
               </p>
               <p>
-                La obstetricia está estrechamente relacionada con la ginecología, pues es la especialidad médica que se enfoca
-                en el tratamiento y manejo del embarazo, cuidado prenatal, parto y cuidado post parto.
+                La ortopedia, a menudo utilizada de manera intercambiable con la traumatología, se enfoca más en la corrección de deformidades o disfunciones de estas estructuras.
               </p>
-              <h4>Compromiso con la salud y con nuestros pacientes</h4>
               <p>
-                Para nosotros, tu confianza y tu salud son lo más importante. Por eso, somos transparentes con los precios y los procedimientos que tenemos disponibles.
-                Mira los precios que tenemos, pensando en tu bienestar económico y tu salud.
+                Nuestros especialistas tratan una amplia gama de condiciones, desde fracturas y lesiones deportivas hasta trastornos degenerativos como la osteoartritis y condiciones congénitas.
+                Además, contamos con la especialidad de fisioterapia para darte una atención integral y completa.
+              </p>
+              <h4>Tu movilidad y bienestar es nuestra prioridad</h4>
+              <p>
+                En la Clínica Unifranz ofrecemos una transparencia total en nuestros servicios, con precios accesibles y una amplia gama de procedimientos y diagnósticos, siempre pensando en tu salud y comodidad.
               </p>
             </div>
             <!-- /.text-block -->
             <ul class="list-items list-unstyled">
               <li>
-                Exámenes pélvicos y pruebas de Papanicolaou.
+                Tratamiento de fracturas y lesiones deportivas.
               </li>
               <li>
-                Manejo de la menopausia.
+                Manejo del dolor musculoesquelético.
               </li>
               <li>
-                Diagnóstico y tratamiento de trastornos menstruales.
+                Cirugías ortopédicas, incluyendo artroscopias y reemplazos articulares.
               </li>
               <li>
-                Cuidado y consejería en anticoncepción.
+                Rehabilitación física y terapias para la recuperación de movilidad.
               </li>
               <li>
-                Evaluación y tratamiento de la infertilidad.
+                Diagnóstico y tratamiento de enfermedades degenerativas como la osteoartritis.
               </li>
               <li>
-                Detección y manejo de enfermedades de transmisión sexual.
+                Atención especializada en trastornos de la columna vertebral.
               </li>
               <li>
-                Cuidado prenatal y seguimiento del embarazo.
+                Consultas y seguimientos personalizados para condiciones crónicas y lesiones.
               </li>
             </ul>
             <div class="widget-plan">
@@ -451,7 +445,7 @@
               <div
                 class="widget__footer d-flex flex-column flex-wrap justify-content-between align-items-center"
               >
-              <p>Consulta y reconsulta:</p>
+              <p>Consulta:</p>
                 <div class="plan__price">
                   Bs. 250
                 </div>
